Changes by Jacob Barkdull 2016-04-19
--------------------------------------------------------------------------------
* Added loading indicators to elements that trigger heavy AJAX requests.
* Fixed: "0 Likes" remaining displayed after sorting comments by likes.


Changes by Jacob Barkdull 2016-03-15
--------------------------------------------------------------------------------
* Small style changes for Like, Edit, and Reply hyperlinks

	- Pages with small fonts no longer cause button icons to be clipped.
	- Button hyperlink text now vertically centered.


* Bug fix

	- Showing "undefined" in JavaScript mode and nothing in PHP mode
	  instead of configured anonymous name in Reply hyperlink tooltip for
	  comments without a name.


* Improved Japanese locale.
* Minor style changes.


Changes by Jacob Barkdull 2016-01-25
--------------------------------------------------------------------------------
* `hashover.js` file moved

	- `hashover.js` moved into `hashover/` directory, this allows you to
	  rename the HashOver root directory without having to modify
	  `hashover.js` as well. This also allows you to have multiple
	  versions of HashOver running on your server without conflicts, each
	  version simply needs its own directory.


* Improved HTTP root path to allow HashOver to run from a sub-directory.
* Comments from logged in users now have `hashover-user-owned` class.
* Fixed: One popular comment more than configured limit being shown.
* Fixed: `fieldOptions` setting not being synced.
* Removed public `$JSONSettingsFile` setting.
* Improved popular comment sorting.
* Small code improvements.


Changes by Jacob Barkdull 2016-01-09
--------------------------------------------------------------------------------
* Fixed: Administrative comment deletion requiring name and password.
* Fixed: Posting comment without a file value posts comment normally.


Changes by Jacob Barkdull 2016-01-04